[gd_scene load_steps=4 format=3 uid="uid://cn6brnb8g7kso"]

[ext_resource type="Script" path="res://Scripts/creditsplaceholder.gd" id="1_pqcuc"]
[ext_resource type="Texture2D" uid="uid://4xwdxvfusrx4" path="res://Imports/screen.png" id="1_ui567"]
[ext_resource type="AudioStream" uid="uid://cjjm7ks2uwdnu" path="res://Imports/Music/SFX/MenuButtonPress.mp3" id="3_gfoxi"]

[node name="credits" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pqcuc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(579, 325)
texture = ExtResource("1_ui567")

[node name="MenuButton" type="MenuButton" parent="."]
layout_mode = 0
offset_left = 930.0
offset_top = 564.0
offset_right = 1129.0
offset_bottom = 622.0
theme_override_font_sizes/font_size = 32
text = "Go back"

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gfoxi")

[node name="InputDelay" type="Timer" parent="."]
wait_time = 0.4

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 35.0
offset_right = 1118.0
offset_bottom = 558.0
theme_override_font_sizes/normal_font_size = 24
text = "https://foozlecc.itch.io/sci-fi-lab-tileset-decor-traps
Used as a base for the main tileset.


https://pixabay.com/ - Various In-Game Sounds


https://brackeysgames.itch.io/brackeys-platformer-bundle - Source of the Fonts used


Toby Fox - Here We Are


Lab Practicum - Valve"

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="timeout" from="InputDelay" to="." method="_on_input_delay_timeout"]
